# taller1

./: README.md  package.xml  setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
results/: Link_Video.txt
taller1/: turtle_bot_interface.py  turtle_bot_player.py  turtle_bot_teleop.py
