<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taller1</name>
  <version>0.0.0</version>
  <description>Bogota-Dynamics</description>
  <maintainer email="robotica@todo.todo">robotica</maintainer>
  <license>Bogota-Dynamics</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>my_msgs</exec_depend>
  <exec_depend>pynput</exec_depend>
  <exec_depend>pygame</exec_depend>
  <exec_depend>tkinter</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>sys</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
